--- a/dux.html
+++ b/dux.html
@@ -13,15 +13,15 @@
       <nav>
         <ul>
           <li>
-            <a href="./about.html" class="list-1"
+            <a href="./index.html" class="list-1"
               ><img src="./assets/image/logo.jpeg" alt="logo" />
             </a>
           </li>
-          <li><a href="./dux.html" class="list">DUSHIME</a></li>
+          <li ><a href="./dux.html" class="list" style="color: aqua;">DUSHIME</a></li>
           <li><a href="./fabrice.html" class="list">FABRICE</a></li>
           <li><a href="./moise.html" class="list">MOISE</a></li>
           <li>
-            <a href="" class="list"><button ">Hire us</button></a>
+            <a href="" class="list"><button >Hire us</button></a>
           </li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
         <div class="container">
           <div class="content">
             <h1>The~Big~Steppers</h1>
-            <p>"Code flows like a river, logic sharp and dreams deliver."</p>
+            <p>"Start small, practice daily, build projects, ask questions, embrace failure" Said by <span style="color: aqua;">Dux</span></p>
             <div class="buttons">
                 <button class="start-btn">
                     start with us 
@@ -42,7 +42,7 @@
 
           <div class="profile">
             <ul>
-              <li class="child-1"><a href="./dux.html">Dux</a></li>
+              <li class="child-1" style="background-color: black; color: aqua; border-top-left-radius: 2rem; border-bottom-left-radius: 2rem;"><a href="./dux.html">Dux</a></li>
               <li class="child-2"><a href="./fabrice.html">Fabrice</a></li>
               <li class="child-3"><a href="./moise.html">Moise</a></li>
             </ul>
@@ -127,8 +127,8 @@
           <section id="profile1" class="section-1">
             <audio controls>
               <source
-                src="./assets/04._bensoul_ft_the_ben_uno_official_lyric_video_mp3_73367.mp3"
-                type="audio/mp3"
+                src="./assets/the_ben_plenty_official_lyric_video_mp3_55999.mp3"
+                type="audio/mp3" style="cursor: pointer;"
               />
               Your browser does not support the audio element.
             </audio>
