--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <nav>
         <ul>
           <li>
-            <a href="./about.html" class="list-1"
+            <a href="./index.html" class="list-1"
               ><img src="./assets/image/logo.jpeg" alt="logo" />
             </a>
           </li>
-          <li><a href="#home" class="list">Dieudonne</a></li>
-          <li><a href="#skills" class="list">Fabrice</a></li>
-          <li><a href="#experience" class="list">Moise</a></li>
+          <li><a href="./dux.html" class="list">DUSHIME</a></li>
+          <li><a href="./fabrice.html" class="list">FABRICE</a></li>
+          <li><a href="./moise.html" class="list">MOISE</a></li>
           <li>
             <a href="" class="list"><button ">Hire us</button></a>
           </li>
@@ -49,8 +49,9 @@
             <img src="./assets/image/dux.jpg" alt="profile" />
             <h1>CodeWith_dux</h1>
             <p>
-              I'm full stack kindly passionist on mobile developing with incount
-              with obstacle to be solved
+              "Proficient developer building <br>
+               scalable applications,optimizing <br> 
+               code, and enhancing user experiences.
             </p>
             <button>See More</button>
           </div>
