--- a/moise.html
+++ b/moise.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li>
-            <a href="./about.html" class="list-1"
+            <a href="./index.html" class="list-1"
               ><img src="./assets/image/logo.jpeg" alt="logo" />
             </a>
           </li>
@@ -44,7 +44,7 @@
             <ul>
               <li class="child-1"><a href="./dux.html">Dux</a></li>
               <li class="child-2"><a href="./fabrice.html">Fabrice</a></li>
-              <li class="child-3"><a href="./moise.html">Moise</a></li>
+              <li class="child-3" style="background-color: black; color: aqua; border-top-right-radius: 2rem; border-bottom-right-radius: 2rem;"><a href="./moise.html">Moise</a></li>
             </ul>
             <img src="./assets/image/moise.jpg" alt="profile" />
             <h1>Moise</h1>
@@ -159,7 +159,6 @@
                 specializes in creating stunning, responsive websites.
               </p></li>
             </ul>
-            
           </section>
         </div>
         
